<resources>
    <string name="app_name">Base</string>
    <string name="next">Next</string>
    <string name="this_is_item_sample">This is item sample!</string>
    <string name="title_intro_1">Test Your Relationship</string>
    <string name="content_intro_1">Find out your love compatibility with your partner</string>
    <string name="title_intro_2">Love Day Counter</string>
    <string name="content_intro_2">Keep track of how long you have been together</string>
    <string name="title_intro_3">Memorable moments</string>
    <string name="content_intro_3">Preserve cherished moments together</string>
    <string name="tv_continue">Continue</string>
    <string name="Permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="desc_activity_permission">This app needs permissions below to work properly</string>
    <string name="camera">Camera</string>
    <string name="allow_access">Allow access</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="desc_warning_permission_dialog">You must allow all Permission to use this app with full feature.</string>
    <string name="header_warning_permission">Warning permission</string>
    <string name="Your_opinion_matter_to_us">Your Opinion Matter To Us!</string>
    <string name="we_d_greatly_appreciate_if_you_can_rate_us">If you enjoy this Wallpaper, would you mind rating us on the Google Play, then?</string>
    <string name="may_be_later">Not now</string>
    <string name="thank_u">Thank you!</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="please_give_rating">please give me a rating!</string>
    <string name="There_is_no_email">There is no email client installed.</string>
    <string name="please_send_us">Please send us some feedback!</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="this_action_may_contain_advertising">This action can contain ads</string>
    <string name="Language">Language</string>
    <string name="rate">Rate</string>
    <string name="start">START</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="policy">Policy</string>
</resources>